# harvest-sync

./: .gitignore  README.md  config-template.toml  pyproject.toml
harvest_automation/: __init__.py  __main__.py  calendar_client.py  classify.py  cli.py  config.py  harvest_client.py  helpers.py  models.py  notes.py  overlap.py  sync.py
