[project]
name            = "harvest-automation"
version         = "0.3.0"
description     = "Sync calendar events into Harvest via duration-mode API"
requires-python = ">=3.13"

dependencies = [
    "httpx>=0.27",
    "icalendar>=5.0.0",
    "recurring-ical-events>=2.1",
    "typer>=0.12",
    "intervaltree>=3.1",
]

# ───── make it runnable ─────
[project.scripts]
harvest-sync = "harvest_automation.cli:app"

# ───────── hatch build backend ─────────
[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build]
# The top-level package directory (no src/ layout here)
packages = ["harvest_automation"]
